--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,72 @@
-.App {
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app {
+  width: 400px;
+  margin-top: 72px;
+}
+
+.question-section {
+  margin-bottom: 16px;
+}
+
+.question-header {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.question-text {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+
+.answer-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+button {
+  font-size: 16px;
+  color: #ffffff;
+  background-color: rgb(69, 214, 233);
+  border-radius: 5px;
+  border: 0px;
+  height: 56px;
+  padding: 4px;
+  margin: 4px;
+  cursor: pointer;
+  width: 100%;
+  outline: none;
+  font-weight: 700;
+}
+
+button:hover {
+  background-color: #a99fee;
+}
+
+.result-header {
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 8px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result-score {
+  font-size: 192px;
+  margin: 40px;
+  text-align: center;
+  color: rgb(115, 98, 255);
 }
